@@ -46,20 +46,24 @@ double randomNumber()
     }
 #endif
     
-    uint64_t fullRandom;
 #if COMPILER(MSVC) && defined(_CRT_RAND_S)
-    uint32_t part1;
-    rand_s(&part1);
-    fullRandom = part1;
+    uint32_t bits;
+    rand_s(&bits);
+    return static_cast<double>(bits) / (static_cast<double>(std::numeric_limits<uint32_t>::max()) + 1.0);
 #elif PLATFORM(DARWIN)
-    fullRandom = arc4random();
+    uint32_t bits = arc4random();
+    return static_cast<double>(bits) / (static_cast<double>(std::numeric_limits<uint32_t>::max()) + 1.0);
 #elif PLATFORM(UNIX)
     uint32_t part1 = random() & (RAND_MAX - 1);
     uint32_t part2 = random() & (RAND_MAX - 1);
     // random only provides 31 bits
-    fullRandom = part1;
+    uint64_t fullRandom = part1;
     fullRandom <<= 31;
     fullRandom |= part2;
+
+    // Mask off the low 53bits
+    fullRandom &= (1LL << 53) - 1;
+    return static_cast<double>(fullRandom)/static_cast<double>(1LL << 53);
 #else
     uint32_t part1 = rand() & (RAND_MAX - 1);
     uint32_t part2 = rand() & (RAND_MAX - 1);
@@ -70,10 +74,11 @@ double randomNumber()
     fullRandom = part1;
     fullRandom <<= 27;
     fullRandom |= part2;
-#endif
+
     // Mask off the low 53bits
     fullRandom &= (1LL << 53) - 1;
     return static_cast<double>(fullRandom)/static_cast<double>(1LL << 53);
+#endif
 }
 
 }
